--- a/main.tex
+++ b/main.tex
@@ -31,16 +31,16 @@
 \newpage
 \input{subnotes/old_ln09.tex}
 
-\part{It is All About the Functions and Sets}
+\part{New Mathematical Prerequisites}
 \input{subnotes/ln00.tex}
 \newpage
 \input{subnotes/ln01.tex}
 \newpage
 \input{subnotes/ln02.tex}
+\newpage
+\input{subnotes/ln03.tex}
 
 \part{Introduction to Signals and Systems}
-\input{subnotes/ln03.tex}
-\newpage
 \input{subnotes/ln04.tex}
 \newpage
 \input{subnotes/ln05.tex}
