--- a/ln.sty
+++ b/ln.sty
@@ -144,9 +144,9 @@
     colback = white, colframe = silver!40!black!60!, colbacktitle = violet!70!black!90!,
     attach boxed title to top left = {yshift = -2mm, xshift = 5mm},
     boxed title style = {sharp corners}, separator sign = {.}}{}
-\newtcbtheorem[number within=section]{ln-quest}{Example Question}%
+\newtcbtheorem[number within=section]{ln-axiom}{Axiom}%
 {enhanced, breakable, colback=ice!5,colframe=ice!35!black!55!}{}
 \newtcbtheorem[number within=section]{ln-think}{Exercise Reader! Exercise!}%
 {enhanced, breakable, colback=lavenderblue!5,colframe=lavenderblue!35!black!55!}{}
-\newtcbtheorem[number within=section]{ln-practice}{Practice}%
+\newtcbtheorem[number within=section]{ln-example}{Example}%
 {enhanced, breakable, colback=lavenderblue!5,colframe=lavenderblue!35!black!55!}{}
